Adding option to skip example building.  Adding missing license info to sub CMakeLists files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,4 +36,8 @@ add_definitions(${LIBSSH_DEFINITIONS})
 
 add_subdirectory(src)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
-add_subdirectory(example)
+
+option(BUILD_EXAMPLES "Enable building of examples" ON)
+if(BUILD_EXAMPLES)
+  add_subdirectory(example)
+endif()
