Adding static define to object library.  Object library cannot be used with shared library since the export and static define isn't setup proper

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,12 +40,12 @@ add_compiler_export_flags()
 
 # To be used with tests, examples, etc
 add_library(qsftpfs_obj OBJECT ${qsftpfs_SRCS})
+set_target_properties(qsftpfs_obj PROPERTIES COMPILE_FLAGS -DQSFTP_STATIC_DEFINE)
 
 add_library(qsftpfss STATIC $<TARGET_OBJECTS:qsftpfs_obj>)
+
 add_library(qsftpfs SHARED ${qsftpfs_SRCS})
 target_link_libraries(qsftpfs ${LIBSSH_LIBRARIES} ${QT_QTCORE_LIBRARY})
-
-set_target_properties(qsftpfss PROPERTIES COMPILE_FLAGS -DQSFTP_STATIC_DEFINE)
 
 generate_export_header(qsftpfs ${NO_BUILD_DEPRECATED} BASE_NAME QSFTP)
 
