--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,10 @@
 
 language: cpp
 
+os:
+  - linux
+  - osx
+
 before_install:
   - if [ `uname` == Linux ];  then sudo apt-get update -qq && sudo apt-get install -qq qt4-dev-tools libssh-dev cmake; fi
   - if [ `uname` == Darwin ]; then brew update && brew install qt libssh cmake; fi
